remove horizontal scrolling; corrected font sizes

--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@ html,body{
 	.overlay .closebtn {
 		position: absolute;
 		top: 0px;
-		left: 20px;
+		left: 25px;
 		font-size: 60px;
 	}
 }
@@ -223,7 +223,7 @@ html,body{
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
-	height: 100vh;
+	height: 100%;
 	width: 100%;
 }	
 .nav .align-oasis {
